--- a/styles.css
+++ b/styles.css
@@ -75,23 +75,84 @@ header {
 /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
   .sticky + .content {
     padding-top: 60px;
-  }
-  
+  }  
  
-/* apply styles to main body */
-  
-div.scroll-container {
+/* apply styles to main body of images */
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+/* Position text in the middle of the page/image */
+
+.scroll-container {
   background-color: #000000;
   overflow: auto;
   white-space: nowrap;
   padding: 10px;
+  position: flex;
+  flex-direction: column;
 }
 
-div.scroll-container img {
+.scroll-container img {
   padding: 10px;
+  scroll-behavior: auto;
 }
 
-  /* About section */
+.scroll-container :hover {
+  background-color: #000000;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  cursor: auto;
+} 
+
+/* Apply styles to inner image */
+
+.container {
+  position: relative;
+  align-items: center;
+  width: 35%;
+  overflow: hidden;
+  transition: 0.3s;
+  cursor: pointer;
+  text-align: center;
+}
+
+.image {
+  opacity: 1;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.container:hover .image {
+  opacity: 0.3;
+}
+
+.container:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+}
+
+/* About section */
 
   h2 { 
     text-align: center;
