--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,14 @@ header h1 {
   font-size: 18px;
 }
 
+/* Experience Section */
+#experience h2 {
+  font-size: 36px;
+  text-align: center;
+  margin: 40px 0 20px;
+  color: #d3d3d3; /* Light gray */
+}
+
 /* Experience Section Styling */
 .experience-section {
   display: flex;
@@ -193,18 +201,17 @@ header h1 {
   color: #ddd;
 }
 
-/* Accordion Section Styling */
 .accordion-button {
-  background-color: #444;
-  color: white;
-  border: none;
-  padding: 10px;
-  cursor: pointer;
-  text-align: left;
   width: 100%;
+  background-color: #333;
+  color: #fff;
+  padding: 15px;
+  text-align: left;
+  border: none;
   outline: none;
-  font-size: 18px;
+  cursor: pointer;
   transition: background-color 0.3s;
+  font-size: 18px;
 }
 
 .accordion-button:hover {
@@ -220,23 +227,14 @@ header h1 {
   color: #ddd;
 }
 
-.accordion-content ul {
-  padding-left: 20px;
-  margin: 10px 0;
-}
-
-.accordion-content ul li {
-  margin-bottom: 10px;
+.accordion-item.active .accordion-content {
+  max-height: 200px; /* Adjust height based on content */
+  padding: 15px;
 }
 
 /* Hover and active state effects */
 .accordion-button.active {
   background-color: #555;
-}
-
-.accordion-item.active .accordion-content {
-  max-height: 200px; /* Adjust height based on content */
-  padding: 15px;
 }
 
 /* Education Section Styling */
@@ -285,17 +283,7 @@ header h1 {
   color: #ddd;
 }
 
-/* Accordion Section Styling */
-.accordion {
-  margin-top: 20px;
-}
-
-.accordion-item {
-  background-color: #444;
-  margin-bottom: 10px;
-  border-radius: 5px;
-  overflow: hidden;
-}
+/* Section Styling for Educational Experience */
 
 .accordion-button {
   width: 100%;
